--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/lab": "^3.0.0-alpha.30",
     "@types/jest": "24.0.11",
     "@types/node": "11.11.0",
     "@types/react": "16.8.7",
@@ -52,6 +53,7 @@
     "@types/react-swipeable-views": "^0.13.0",
     "@types/redux": "^3.6.0",
     "prettier": "^1.16.4",
+    "react-localize-redux": "^3.5.2",
     "tslint": "^5.13.1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^8.0.1",
