--- a/web/package.json
+++ b/web/package.json
@@ -16,8 +16,11 @@
     "@types/react-redux": "^7.0.3",
     "@types/react-router-dom": "^4.3.1",
     "@types/react-router-redux": "^5.0.18",
+    "@types/underscore": "^1.8.13",
     "axios": "^0.18.0",
     "cuid": "^2.1.6",
+    "i": "^0.3.6",
+    "npm": "^6.9.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
@@ -30,7 +33,8 @@
     "rxjs": "^6.4.0",
     "typeface-roboto": "0.0.54",
     "typesafe-actions": "^3.2.1",
-    "typescript": "3.3.3333"
+    "typescript": "3.3.3333",
+    "underscore": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
