--- a/web/package.json
+++ b/web/package.json
@@ -37,9 +37,9 @@
     "underscore": "^1.9.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
     "eject": "react-scripts eject",
     "lint": "tslint 'src/**/*.{ts,tsx}'"
@@ -53,10 +53,16 @@
     "not ie <= 11",
     "not op_mini all"
   ],
+  "jest": {
+    "moduleNameMapper": {
+      "@core/(.*)": "<rootDir>/src/core/$1"
+    }
+  },
   "devDependencies": {
     "@types/react-swipeable-views": "^0.13.0",
     "@types/redux": "^3.6.0",
     "prettier": "^1.16.4",
+    "react-app-rewired": "^2.1.1",
     "react-localize-redux": "^3.5.2",
     "tslint": "^5.13.1",
     "tslint-config-prettier": "^1.18.0",
