--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/react-router-redux": "^5.0.18",
     "@types/underscore": "^1.8.13",
+    "alea": "^1.0.0",
     "axios": "^0.18.0",
     "cuid": "^2.1.6",
     "i": "^0.3.6",
