--- a/web/package.json
+++ b/web/package.json
@@ -16,8 +16,8 @@
     "@types/react-redux": "^7.0.3",
     "@types/react-router-dom": "^4.3.1",
     "@types/react-router-redux": "^5.0.18",
+    "@types/seedrandom": "^2.4.27",
     "@types/underscore": "^1.8.13",
-    "alea": "^1.0.0",
     "axios": "^0.18.0",
     "cuid": "^2.1.6",
     "i": "^0.3.6",
@@ -32,6 +32,7 @@
     "redux": "^4.0.1",
     "redux-observable": "^1.0.0",
     "rxjs": "^6.4.0",
+    "seedrandom": "^3.0.1",
     "typeface-roboto": "0.0.54",
     "typesafe-actions": "^3.2.1",
     "typescript": "3.3.3333",
