cards are displayed

--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.18.0",
     "cuid": "^2.1.6",
     "i": "^0.3.6",
+    "markdown-to-jsx": "^6.9.2",
     "npm": "^6.9.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
