Working on router

--- a/web/package.json
+++ b/web/package.json
@@ -15,11 +15,12 @@
     "@types/react-dom": "16.8.2",
     "@types/react-redux": "^7.0.3",
     "@types/react-router-dom": "^4.3.1",
-    "@types/react-router-redux": "^5.0.18",
     "@types/seedrandom": "^2.4.27",
     "@types/underscore": "^1.8.13",
     "axios": "^0.18.0",
+    "connected-react-router": "^6.3.2",
     "cuid": "^2.1.6",
+    "history": "^4.9.0",
     "i": "^0.3.6",
     "markdown-to-jsx": "^6.9.2",
     "npm": "^6.9.0",
@@ -27,7 +28,6 @@
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
-    "react-router-redux": "^4.0.8",
     "react-scripts": "2.1.8",
     "react-swipeable-views": "^0.13.1",
     "redux": "^4.0.1",
