--- a/web/package.json
+++ b/web/package.json
@@ -10,20 +10,17 @@
     "@material-ui/icons": "^3.0.2",
     "@material-ui/lab": "^3.0.0-alpha.30",
     "@types/jest": "24.0.11",
-    "@types/node": "11.11.0",
+    "@types/lodash": "^4.14.123",
     "@types/react": "16.8.7",
     "@types/react-dom": "16.8.2",
     "@types/react-redux": "^7.0.3",
     "@types/react-router-dom": "^4.3.1",
     "@types/seedrandom": "^2.4.27",
-    "@types/underscore": "^1.8.13",
     "axios": "^0.18.0",
     "connected-react-router": "^6.3.2",
     "cuid": "^2.1.6",
     "history": "^4.9.0",
-    "i": "^0.3.6",
     "markdown-to-jsx": "^6.9.2",
-    "npm": "^6.9.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
@@ -36,8 +33,7 @@
     "seedrandom": "^3.0.1",
     "typeface-roboto": "0.0.54",
     "typesafe-actions": "^3.2.1",
-    "typescript": "3.3.3333",
-    "underscore": "^1.9.1"
+    "typescript": "3.3.3333"
   },
   "scripts": {
     "start": "react-app-rewired start",
