--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
     "react-swipeable-views": "^0.13.1",
+    "recharts": "^1.5.0",
     "redux": "^4.0.1",
     "redux-observable": "^1.0.0",
     "rxjs": "^6.4.0",
@@ -53,11 +54,13 @@
   ],
   "jest": {
     "moduleNameMapper": {
-      "@core/(.*)": "<rootDir>/src/core/$1"
+      "@core/(.*)": "<rootDir>/src/core/$1",
+      "@utils/(.*)": "<rootDir>/src/utils/$1"
     }
   },
   "devDependencies": {
     "@types/react-swipeable-views": "^0.13.0",
+    "@types/recharts": "^1.1.14",
     "@types/redux": "^3.6.0",
     "prettier": "^1.16.4",
     "react-app-rewired": "^2.1.1",
