--- a/web/tsconfig.paths.json
+++ b/web/tsconfig.paths.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
       "baseUrl": ".",
       "paths": {
-        "@core/*": ["src/core/*"]
+        "@core/*": ["src/core/*"],
+        "@utils/*": ["src/utils/*"]
       }
     }
   }
