--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
+    "react-spring": "^8.0.18",
     "react-swipeable-views": "^0.13.1",
     "recharts": "^1.5.0",
     "redux": "^4.0.1",
