--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/x-icon"
     }
   ],
-  "start_url": "/",
+  "start_url": "/Drinctet",
   "display": "standalone",
   "theme_color": "#3498db",
   "background_color": "#3498db"
