--- a/web2/package.json
+++ b/web2/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.7.0",
+    "@mui/system": "^5.7.0",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -14,10 +15,13 @@
     "@types/node": "^17.0.33",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "framer-motion": "^6.3.3",
     "i18next": "^21.8.2",
     "i18next-browser-languagedetector": "^6.1.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.31.1",
+    "react-i18next": "^11.16.9",
     "react-redux": "^8.0.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
